Hardware/GMS_skx_tma_metrics_api.h

   
    float skx_instr_per_core( const uint64_t instr_retired_any,
                              const uint64_t core_clks);
   
    float skx_fp_scalar_retired( const uint64_t fp_arith_inst_retired_scalar_single,
                                 const uint64_t fp_arith_inst_retired_scalar_double,
				 const uint64_t uops_retired_retired_slots);
   
    float skx_fp_vector_retired( const uint64_t fp_arith_inst_retired_128B_packed_double,
                                 const uint64_t fp_arith_inst_retired_128B_packed_single,
				 const uint64_t fp_arith_inst_retired_256B_packed_double,
				 const uint64_t fp_arith_inst_retired_256B_packed_single,
				 const uint64_t fp_arith_inst_retired_512B_packed_double,
				 const uint64_t fp_arith_inst_retired_512B_packed_single,
				 const uint64_t uops_retired_retired_slots);
				 
   
    float skx_fp_arith_util_core(         const uint64_t uops_retired_retired_slots,
                                          const float scalar_ratio,
					  const float vector_ratio,
					  const uint64_t core_clks);
   
    float skx_ilp_ratio( const uint64_t uops_executed_thread,
                         const float execute_cycles);
     
      float skx_alu_util( const uint64_t UOPS_DISPATCHED_PORT_PORT_0,
                          const uint64_t UOPS_DISPATCHED_PORT_PORT_1,
			  const uint64_t UOPS_DISPATCHED_PORT_PORT_5,
			  const uint64_t UOPS_DISPATCHED_PORT_PORT_6,
			  const uint64_t core_clks);
     
      float skx_port_6_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_6,
                             const uint64_t core_clks);
     
      float skx_port_2_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_2,
                             const uint64_t core_clks);
     
      float skx_port_3_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_3,
                             const uint64_t core_clks);
     
      float skx_port_4_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_4,
                             const uint64_t core_clks);
    
      float skx_port_7_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_7,
                             const uint64_t core_clks);