Hardware/GMS_skx_tma_bindings.f90


            function skx_port_6_clks(UOPS_DISPATCHED_PORT_PORT_6, &
                                     core_clks) &
                                     bind(c,name="skx_port_6_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_6
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_6_clks
            end function skx_port_6_clks
            
          
       end interface

      interface


            function skx_port_2_clks(UOPS_DISPATCHED_PORT_PORT_2, &
                                     core_clks) &
                                     bind(c,name="skx_port_2_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_2
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_2_clks
            end function skx_port_2_clks
            
          
       end interface

       interface


            function skx_port_3_clks(UOPS_DISPATCHED_PORT_PORT_3, &
                                     core_clks) &
                                     bind(c,name="skx_port_3_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_3
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_3_clks
            end function skx_port_3_clks
            
          
       end interface

       interface


            function skx_port_4_clks(UOPS_DISPATCHED_PORT_PORT_4, &
                                     core_clks) &
                                     bind(c,name="skx_port_4_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_4
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_4_clks
            end function skx_port_4_clks
            
          
       end interface

       interface


            function skx_port_7_clks(UOPS_DISPATCHED_PORT_PORT_7, &
                                     core_clks) &
                                     bind(c,name="skx_port_7_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_7
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_7_clks
            end function skx_port_7_clks
            
          
       end interface

         
       interface

           function skx_instr_per_core( instr_retired_any,&
                                        core_clks) &
                                        bind(c,name="skx_instr_per_core")
                    integer(c_size_t) :: instr_retired_any
                    integer(c_size_t) :: core_clks
                    real(c_float)     :: skx_instr_per_core
           end function skx_instr_per_core
           
        end interface

        interface

              function skx_fp_scalar_retired( fp_arith_inst_retired_scalar_single,&
                                              fp_arith_inst_retired_scalar_double,&
                                              uops_retired_retired_slots) &
                                              bind(c,name="skx_fp_scalar_retired")
                     integer(c_size_t) ::  fp_arith_inst_retired_scalar_single
                     integer(c_size_t) ::  fp_arith_inst_retired_scalar_double
                     integer(c_size_t) ::  uops_retired_retired_slots
                     real(c_float)     ::  skx_fp_scalar_retired
              end function skx_fp_scalar_retired
              
        end interface

           
        interface

             function skx_fp_vector_retired(  fp_arith_inst_retired_128B_packed_double,&
                                  fp_arith_inst_retired_128B_packed_single,&
			          fp_arith_inst_retired_256B_packed_double,&
				 fp_arith_inst_retired_256B_packed_single,&
				  fp_arith_inst_retired_512B_packed_double,&
				 fp_arith_inst_retired_512B_packed_single,&
				 uops_retired_retired_slots) &
                                 bind(c,name="skx_fp_vector_retired")
                   integer(c_size_t) :: fp_arith_inst_retired_128B_packed_double
                   integer(c_size_t) :: fp_arith_inst_retired_128B_packed_single
                   integer(c_size_t) :: fp_arith_inst_retired_256B_packed_double
                   integer(c_size_t) :: fp_arith_inst_retired_256B_packed_single
                   integer(c_size_t) :: fp_arith_inst_retired_512B_packed_double
                   integer(c_size_t) :: fp_arith_inst_retired_512B_packed_single
                   real(c_float)     :: skx_fp_vector_retired
             end function skx_fp_vector_retired
             

        end interface

          
        interface

             function skx_fp_arith_util_core(  uops_retired_retired_slots,&
                                               scalar_ratio,&
					       vector_ratio,&
					       core_clks) &
                                               bind(c,name="skx_fp_arith_util_core")
                       integer(c_size_t) :: uops_retired_retired_slot
                       real(c_float)     :: scalar_ratio
                       real(c_float)     :: vector_ratio
                       integer(c_size_t) :: core_clks
                       real(c_float)     :: skx_fp_arith_util_core
             end function skx_fp_arith_util_core
             
        end interface

        interface

            function skx_ilp_ratio( uops_executed_thread,&
                                    execute_cycles) &
                                    bind(c,name="skx_ilp_ratio")
                  integer(c_size_t) :: uops_executed_thread
                  real(c_float)     :: execute_cycles
                  real(c_float)     :: skx_ilp_ratio
            end function skx_ilp_ratio
            
         end interface

         interface

               function skx_alu_util(  UOPS_DISPATCHED_PORT_PORT_0,&
                                       UOPS_DISPATCHED_PORT_PORT_1,&
			               UOPS_DISPATCHED_PORT_PORT_5,&
			               UOPS_DISPATCHED_PORT_PORT_6,&
                                       core_clks) &
                                       bind(c,name="skx_alu_util")
                    integer(c_size_t) ::  UOPS_DISPATCHED_PORT_PORT_0
                    integer(c_size_t) ::  UOPS_DISPATCHED_PORT_PORT_1
                    integer(c_size_t) ::  UOPS_DISPATCHED_PORT_PORT_5
                    integer(c_size_t) ::  UOPS_DISPATCHED_PORT_PORT_6
                    integer(c_size_t) ::  core_clks
                    real(c_float)     ::  skx_alu_util
               end function skx_alu_util
               

         end interface

end module mos_skx_tma_bindings
